proposed landing page changes; mousedown responsiveness fix in game

--- a/client/style.css
+++ b/client/style.css
@@ -25,12 +25,6 @@
   padding: 0;
   list-style: none;
 }
-li ul {
-  margin-left: 25px;
-}
-li li {
-  list-style: circle;
-}
 html, body { width: 100% }
 body {
   color: #333;
@@ -75,15 +69,16 @@ textarea {
   word-wrap: break-word;
 }
 #header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 20px;
   height: 40px;
 }
   #header h1 {
-    width: 990px;
+    padding-left: 20px;
+    width: 970px;
     margin: 0 auto;
-    text-align: right;
+    text-align: left;
   }
   #header h1 span {
     color: #999;
@@ -132,7 +127,6 @@ textarea {
       text-align: left;
       margin-top: 15px;
     }
-
 .p0 {color: #771536} 
 .p1 {color: #0E4647} 
 .p2 {color: #597725}
@@ -141,7 +135,6 @@ textarea {
 .p5 {color: #28A09A}
 .p6 {color: #9FBC42}
 .p7 {color: #D84E86}
-
 .puzzled {
   display: none;
   border-radius: 4px;
@@ -338,7 +331,12 @@ textarea {
   position: relative;
   z-index: 2;
 }
+p { margin-bottom: 10px; }
+#explanation h1 { margin: 0 0 10px 15px }
+#explanation h2 { margin: 25px 0 10px 15px }
 #wrap #explanation .full { width: 700px; }
+li ul { margin-left: 25px; }
+li li { list-style: circle; }
 .button {
   background: #fff;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
@@ -360,11 +358,10 @@ li#display_ad {
   margin-bottom: 15px;
   background: #cecece;
 }
-.set {
+.sidebar {
   position:relative;
   margin: 0px -415px 10px 0;
   width: 390px;
-  height: 80px;
   float: right;
   background: #eee;
   padding: 10px 10px 10px 25px;
@@ -375,6 +372,3 @@ li#display_ad {
   z-index: -1;
 }
 .set .cardwrap { float: left; }
-#explanation p { margin-bottom: 10px; }
-#explanation h1 { margin: 0 0 10px 15px }
-#explanation h2 { margin: 25px 0 10px 15px }
