--- a/client/style.css
+++ b/client/style.css
@@ -353,9 +353,7 @@ li li { list-style: circle; }
 }
 .spaced { margin: 30px 0; }
 .social {
-  height: 30px;
-  width: 200px;
-  padding-top: 10px;
+  width: 85%;
   margin: 0 auto;
 }
 .button:hover { background: #eee; }
